--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,35 @@
+# Application info
+info.app:
+  name: Helios
+  description: Sun blinds controller
 
+# Actuator
+management:
+  endpoints.web.exposure.include: '*'
+  endpoint.health.show-details: always
+
+# JAX-RS
+spring.jackson.serialization.INDENT_OUTPUT: true
+spring.jackson.serialization.indent_output: true
+
+
+
+# Logging levels
+logging.level:
+  root: WARN
+  com.github.mwierzchowski.helios: INFO
+
+# Tasks scheduling
+helios.schedule:
+  weather-checks: 15000 # 15 s
+  owm-expire: 900000 # 15 min
+
+# Fault tolerance
+resilience4j.retry.instances:
+  owm:
+    maxRetryAttempts: 6
+    waitDuration: 1s
+    enableExponentialBackoff: true
+    exponentialBackoffMultiplier: 2
+    retryExceptions:
+    - java.lang.Exception
