Add PostgreSQL and integration tests bootstrapping

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,13 @@ logging.level:
   root: WARN
   com.github.mwierzchowski.helios: INFO
 
+# Datasource
+spring.datasource:
+  url: 'jdbc:postgresql://localhost:5432/helios'
+  username: 'helios'
+  password: 'helios'
+  driver-class-name: org.postgresql.Driver
+
 # Fault tolerance
 resilience4j.retry.instances:
   owm:
