--- a/build.gradle
+++ b/build.gradle
@@ -44,13 +44,16 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.3.1.Final'
 	implementation 'io.swagger.core.v3:swagger-jaxrs2:2.1.1'
 	implementation 'io.github.resilience4j:resilience4j-spring-boot2:0.16.0'
+	implementation 'org.postgresql:postgresql'
 
 	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
 	testImplementation 'org.spockframework:spock-spring:1.3-groovy-2.5'
 	testImplementation 'com.github.tomakehurst:wiremock:2.26.3'
+	testImplementation 'org.springframework.cloud:spring-cloud-starter:2.2.2.RELEASE'
 	testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock:2.2.2.RELEASE'
+	testImplementation 'com.playtika.testcontainers:embedded-postgresql:1.43'
 
 	// Dev tools
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
