--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 	implementation 'io.swagger.core.v3:swagger-jaxrs2:2.1.1'
 	implementation 'io.github.resilience4j:resilience4j-spring-boot2:0.16.0'
 	implementation 'org.postgresql:postgresql'
+	implementation 'org.liquibase:liquibase-core'
 
 	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -80,6 +81,7 @@ compileJava.dependsOn swaggerSources.owm.code
 sourceSets.main.java.srcDirs += "${swaggerSources.owm.code.outputDir}/src/main/java"
 sourceSets.main.resources.srcDirs += "${swaggerSources.owm.code.outputDir}/src/main/resources"
 
+// todo maybe this can be removed as build is not silent anyway
 test {
 	// Workaround for https://github.com/gradle/gradle/issues/6725
 	// Should be removed when Gradle switch to Groovy 3
