Replace in-house p6spy integration with dedicated spring boot started

--- a/src/main/resources/application-debug.yaml
+++ b/src/main/resources/application-debug.yaml
@@ -2,4 +2,4 @@ logging.level:
   root: INFO
   com.github.mwierzchowski.helios: DEBUG
 
-helios.intercept-sql: true
+decorator.datasource.p6spy.enable-logging: true
