--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,7 +21,9 @@ spring:
     password: 'helios'
   jpa.database-platform: org.hibernate.dialect.PostgreSQLDialect
   liquibase.change-log: classpath:liquibase-changelog.sql
-decorator.datasource.p6spy.enable-logging: false
+decorator.datasource.p6spy:
+  enable-logging: false
+  log-format: '[connection %(connectionId) - %(category)] %(sql)'
 
 # Fault tolerance
 resilience4j.retry.instances:
