--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,7 +23,7 @@ spring:
   liquibase.change-log: classpath:liquibase-changelog.sql
 decorator.datasource.p6spy:
   enable-logging: false
-  log-format: '[connection %(connectionId) - %(category)] %(sql)'
+  log-format: '(connection %(connectionId) - %(category)) %(sql)'
 
 # Fault tolerance
 resilience4j.retry.instances:
