Rename OWM specification to distinguish it from application openapi config

--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ dependencies {
 def owmClientPackage = "org.openweathermap"
 swaggerSources {
 	owm {
-		inputFile = file('src/main/openapi/openapi-owm.yaml')
+		inputFile = file('src/main/specs/owm-spec.yaml')
 		code {
 			language = 'java'
 			library = "resttemplate"
