--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,2 @@
-helios.constraints.WeekDay = must be week day name in English uppercase
+helios.constraint.WeekDay = must be week day name in English uppercase
+helios.constraint.Time = Must be time in format "hh:mm:ss.ms" (seconds and milliseconds are optional)
