--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -16,6 +16,7 @@ resilience4j.retry.instances:
 # Canned responses from WireMock
 helios.owm.base-path: http://localhost:${wiremock.server.port}/owm-mock/data/2.5/
 helios.sunapi.base-path: http://localhost:${wiremock.server.port}/sun-mock
+helios.geoip.ip-checker-url: http://localhost:${wiremock.server.port}/checkip-mock
 
 # Disable automatic processes binded to application start
 helios.common.processing-on-startup-enabled: false
@@ -23,6 +24,7 @@ helios.weather.check-delay-after-startup: 6000000
 
 # Static location for tests
 helios.location:
+  fixed: true
   city: Warsaw
   latitude: 52.23
   longitude: 21.01
