--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,2 @@
-helios.constraints.WeekDay = must be week day name in English uppercase
+helios.constraints.WeekDay = Must be week day name in English uppercase
 helios.constraints.Time = Must be time in format "hh:mm:ss.ms" (seconds and milliseconds are optional)
