--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.6.1'
 	implementation 'org.mapstruct:mapstruct:1.3.1.Final'
 	implementation 'io.swagger.core.v3:swagger-jaxrs2:2.1.2'
+	implementation 'org.webjars:swagger-ui:3.25.1'
+	implementation 'org.webjars:webjars-locator:0.40'
 	implementation 'io.github.resilience4j:resilience4j-spring-boot2:0.16.0'
 	implementation 'org.postgresql:postgresql'
 	implementation 'org.liquibase:liquibase-core'
