--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	swagerUiBundle {
+		transitive = false
+	}
 }
 
 repositories {
@@ -31,7 +34,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+
+	// Swagger
 	swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.18'
+	swagerUiBundle 'org.webjars:swagger-ui:3.25.1'
 
 	// Compilation
 	compileOnly 'org.projectlombok:lombok'
@@ -48,8 +54,6 @@ dependencies {
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.6.1'
 	implementation 'org.mapstruct:mapstruct:1.3.1.Final'
 	implementation 'io.swagger.core.v3:swagger-jaxrs2:2.1.2'
-	implementation 'org.webjars:swagger-ui:3.25.1'
-	implementation 'org.webjars:webjars-locator:0.40'
 	implementation 'io.github.resilience4j:resilience4j-spring-boot2:0.16.0'
 	implementation 'org.postgresql:postgresql'
 	implementation 'org.liquibase:liquibase-core'
@@ -69,6 +73,7 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
+// External services clients generation
 def specsDir = 'src/main/specs'
 def owmClientPackage = "org.openweathermap"
 def sunapiClientPackage = "org.sunrisesunset"
@@ -109,13 +114,28 @@ compileJava.dependsOn swaggerSources.sunapi.code
 sourceSets.main.java.srcDirs += "${swaggerSources.sunapi.code.outputDir}/src/main/java"
 sourceSets.main.resources.srcDirs += "${swaggerSources.sunapi.code.outputDir}/src/main/resources"
 
-// Open-API generation
+// Open-API and Swagger UI
+def openApiDir = file("$sourceSets.main.output.resourcesDir/static")
 resolve {
 	openApiFile = file("$project.rootDir/openapi.yaml")
-	outputDir = file("$sourceSets.main.output.resourcesDir/static")
+	outputDir = openApiDir
 	classpath = sourceSets.main.runtimeClasspath
 	resourcePackages = [project.group.toString()]
 	prettyPrint = true
 	outputFormat = 'JSON'
 	tasks.jar.dependsOn resolve
+}
+task unpackSwaggerUi(type: Copy) {
+	from zipTree(configurations.swagerUiBundle.singleFile).matching {
+		include "/META-INF/resources/webjars/swagger-ui/**/*.*"
+		eachFile {
+			it.relativePath = new RelativePath(true, it.relativePath.segments.drop(5))
+		}
+		includeEmptyDirs = false
+	}
+	into openApiDir
+	filter {
+		it.replaceAll('https://petstore.swagger.io/v2/swagger.json', 'openapi.json')
+	}
+	tasks.jar.dependsOn unpackSwaggerUi
 }
