--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,20 +3,13 @@
 
 name: Build 
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+on:  push
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Set up JDK 1.13
       uses: actions/setup-java@v1
       with:
         java-version: 1.13
