--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,17 +7,15 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
+    - name: Setup
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.13
-      uses: actions/setup-java@v1
+    - uses: actions/setup-java@v1
       with:
         java-version: 1.13
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
+    - run: chmod +x gradlew
+    - name: Compile
       run: ./gradlew assemble
-  Test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Test with Gradle
-        run: ./gradlew test
+    - name: Test
+      run: ./gradlew test
+
+
