--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,19 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Integration
+name: Continous Integration
 on:  push
 jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
-    - name: Setup
+    - name: Checkout
       uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
+    - name: Setup Java 13
+      uses: actions/setup-java@v1
       with:
         java-version: 1.13
-    - run: chmod +x gradlew
-    - name: Compile
-      run: ./gradlew assemble
-    - name: Test
-      run: ./gradlew test
-
-
+    - name: Setup Gradle Wrapper
+      run: chmod +x gradlew
+    - name: Build
+      run: ./gradlew build
