--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Set up Gradle Wrapper
       run: chmod +x gradlew
     - name: Build
-      run: ./gradlew build sonarqube
+      run: ./gradlew build sonarqube --stacktrace
