--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,5 +15,12 @@ jobs:
         java-version: 1.13
     - name: Set up Gradle Wrapper
       run: chmod +x gradlew
+    - name: Set up dependencies cache
+      uses: actions/cache@v1
+      with:
+        path: ~/.gradle/caches
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
     - name: Build
       run: ./gradlew build sonarqube --stacktrace
