--- a/build.gradle
+++ b/build.gradle
@@ -140,3 +140,12 @@ task addSwaggerUi(type: Copy) {
 	addSwaggerUi.dependsOn resolve
 }
 tasks.jar.dependsOn addSwaggerUi
+
+sonarqube {
+	properties {
+		property "sonar.projectKey", "mwierzchowski_helios"
+		property "sonar.organization", "mwierzchowski"
+		property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.login", System.getenv('SONAR_TOKEN')
+	}
+}
