--- a/build.gradle
+++ b/build.gradle
@@ -146,6 +146,6 @@ sonarqube {
 		property "sonar.projectKey", "mwierzchowski_helios" // todo remove?
 		property "sonar.organization", "mwierzchowski" // todo remove?
 		property "sonar.host.url", "https://sonarcloud.io"
-		property "sonar.login", System.getenv('SONAR_TOKEN')
+		property "sonar.login", System.getenv('SONAR_LOGIN')
 	}
 }
