--- a/build.gradle
+++ b/build.gradle
@@ -143,6 +143,7 @@ tasks.jar.dependsOn addSwaggerUi
 
 sonarqube {
 	properties {
+		property "sonar.projectKey", "mwierzchowski_helios"
 		property "sonar.host.url", "https://sonarcloud.io"
 		property "sonar.login", System.getenv('SONAR_LOGIN')
 	}
