--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'io.swagger.core.v3.swagger-gradle-plugin' version '2.1.2'
 	id 'org.hidetake.swagger.generator' version '2.18.2'
-	id "org.sonarqube" version "2.7.1"
+	id "org.sonarqube" version "2.7.1" // TODO upgrade
 }
 
 group = 'com.github.mwierzchowski.helios'
@@ -141,10 +141,10 @@ task addSwaggerUi(type: Copy) {
 }
 tasks.jar.dependsOn addSwaggerUi
 
-sonarqube {
-	properties {
-		property "sonar.projectKey", "mwierzchowski_helios"
-		property "sonar.host.url", "https://sonarcloud.io"
-		property "sonar.login", System.getenv('SONAR_LOGIN')
-	}
-}
+//sonarqube {
+//	properties {
+//		property "sonar.projectKey", "mwierzchowski_helios"
+//		property "sonar.host.url", "https://sonarcloud.io"
+//		property "sonar.login", System.getenv('SONAR_LOGIN')
+//	}
+//}
