--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
+systemProp.sonar.organization=mwierzchowski
+systemProp.sonar.host.url=https://sonarcloud.io
+
 #systemProp.sonar.projectKey=mwierzchowski_helios
-#systemProp.sonar.organization=mwierzchowski
-#systemProp.sonar.host.url=https://sonarcloud.io
 #systemProp.sonar.login=$SONAR_LOGIN
