--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 systemProp.sonar.organization=mwierzchowski
 systemProp.sonar.host.url=https://sonarcloud.io
+systemProp.sonar.projectKey=mwierzchowski_helios
 
-#systemProp.sonar.projectKey=mwierzchowski_helios
 #systemProp.sonar.login=$SONAR_LOGIN
