--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
+# Sonar
 systemProp.sonar.host.url=https://sonarcloud.io
 systemProp.sonar.organization=mwierzchowski
-#systemProp.sonar.projectKey=mwierzchowski_helios
+systemProp.sonar.projectKey=mwierzchowski_helios
