--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,11 +23,11 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gradle-
     - name: Assemble
-      run: ./gradlew assemble
+      run: ./gradlew assemble --quiet --stacktrace
     - name: Test
-      run: ./gradlew test
+      run: ./gradlew test --quiet --stacktrace
     - name: Update Sonar
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: ./gradlew sonarqube
+      run: ./gradlew sonarqube --quiet --stacktrace
