--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -9,12 +9,15 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
     - name: Set up Java 13
       uses: actions/setup-java@v1
       with:
         java-version: 1.13
+
     - name: Set up Gradle Wrapper
       run: chmod +x gradlew
+
     - name: Set up dependencies cache
       uses: actions/cache@v1
       with:
@@ -22,10 +25,17 @@ jobs:
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
+
     - name: Assemble
       run: ./gradlew assemble --quiet --stacktrace
+
     - name: Test
       run: ./gradlew test --quiet --stacktrace
+      uses: actions/upload-artifact@v1
+      with:
+        name: Test report
+        path: /home/runner/work/helios/helios/build/reports/tests/test/index.html
+
     - name: Update Sonar
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
