--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -31,7 +31,10 @@ jobs:
 
     - name: Test
       run: ./gradlew test --quiet --stacktrace
-    - uses: actions/upload-artifact@v1
+
+    - name: Export tests report
+      uses: actions/upload-artifact@v1
+      if: always()
       with:
         name: Test report
         path: /home/runner/work/helios/helios/build/reports/tests/test/index.html
