--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -37,7 +37,7 @@ jobs:
       if: always()
       with:
         name: Test report
-        path: /home/runner/work/helios/helios/build/reports/tests/test/index.html
+        path: /home/runner/work/helios/helios/build/reports/tests/test
 
     - name: Update Sonar
       env:
