--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -21,7 +21,7 @@ jobs:
     - name: Set up dependencies cache
       uses: actions/cache@v1
       with:
-        path: ~/.gradle
+        path: ~/.gradle/caches
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
