--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@
 systemProp.sonar.host.url=https://sonarcloud.io
 systemProp.sonar.organization=mwierzchowski
 systemProp.sonar.projectKey=mwierzchowski_helios
-systemProp.sonar.jacoco.reportPath=build/jacoco/test.exec
+systemProp.sonar.jacoco.reportPath=build/reports/jacoco/test/jacocoTestReport.xml
