--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -27,7 +27,7 @@ jobs:
       run: ./gradlew assemble
 
     - name: Test
-      run: ./gradlew test
+      run: ./gradlew test jacocoTestReport
 
     - name: Export Test Summary
       uses: actions/upload-artifact@v1
