--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ systemProp.sonar.host.url=https://sonarcloud.io
 systemProp.sonar.organization=mwierzchowski
 systemProp.sonar.projectKey=mwierzchowski_helios
 systemProp.sonar.jacoco.reportPath=build/reports/jacoco/test/jacocoTestReport.xml
+systemProp.sonar.exclusions=build/generated/sources/**.*
