--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -29,9 +29,16 @@ jobs:
     - name: Test
       run: ./gradlew test jacocoTestReport
 
-    - name: Export Test Summary
-      uses: actions/upload-artifact@v1
+    - name: Check if Test Summary was created
       if: always()
+      id: check_test_summary
+      uses: andstor/file-existence-action@v1
+      with:
+        files: "/home/runner/work/helios/helios/build/reports/tests/tes"
+
+    - name: Export Test Summary
+      uses: actions/upload-artifact@v2
+      if: steps.check_test_summary.outputs.files_exists == 'true'
       with:
         name: Test Summary
         path: /home/runner/work/helios/helios/build/reports/tests/test
