Feature/add cicd (#6)
Add Continous Integration

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 ### Gradle ###
 .gradle
+.gradletasknamecache
 build/
 
 ### IntelliJ IDEA ###
-.idea
+.idea/*
+!.idea/runConfigurations
 *.iws
 *.iml
 *.ipr
@@ -40,4 +42,3 @@ out/
 ### Others ###
 *.log
 hs_err_pid*
-
