--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ systemProp.sonar.organization=mwierzchowski
 systemProp.sonar.projectKey=mwierzchowski_helios
 systemProp.sonar.jacoco.reportPath=build/reports/jacoco/test/jacocoTestReport.xml
 systemProp.sonar.exclusions=build/generated/sources/**.*
+systemProp.sonar.scm.disabled=true
