--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -43,7 +43,7 @@ jobs:
         name: Test Summary
         path: /home/runner/work/helios/helios/build/reports/tests/test
 
-    - name: Update Sonar
+    - name: Quality scan
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
