--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Assemble JAR
       run: ./gradlew assemble
 
-    - name: Test unit/integration
+    - name: Test Unit/Integration
       run: ./gradlew test jacocoTestReport
 
     - name: Assemble image
