--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -7,7 +7,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Set up Java 13
+    - name: Set up JDK 13
       uses: actions/setup-java@v1
       with:
         java-version: 1.13
