--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
 }
 
 group = 'com.github.mwierzchowski.helios'
-version = System.getenv('GITHUB_RUN_ID') ?: 'SNAPSHOT'
+version = System.getenv('VERSION') ?: 'SNAPSHOT'
 sourceCompatibility = '1.13'
 targetCompatibility = '1.13'
 
