--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -1,7 +1,7 @@
 name: CI
 on: push
 env:
-  VERSION: ${{github.run_id}}
+  VERSION: ${{github.run_number}}
   TEST_SUMMARY: /home/runner/work/helios/helios/build/reports/tests/test
 
 jobs:
@@ -50,14 +50,14 @@ jobs:
       if: always()
       uses: andstor/file-existence-action@v1
       with:
-        files: $TEST_SUMMARY
+        files: ${{env.TEST_SUMMARY}}
 
     - name: Export test summary
       if: steps.check_test_summary.outputs.files_exists == 'true'
       uses: actions/upload-artifact@v2
       with:
         name: Test Summary
-        path: $TEST_SUMMARY
+        path: ${{env.TEST_SUMMARY}}
 
     - name: Export Docker image
       run: echo 'todo'
