Feature/dockerize application (#15)
* Fix problem with Jersey not able to scan fat jar

* Add Dockerfile

* Add image build and testing to workflow (partially stubbed)

* Fix step name to look better

* Fix step name to look better

* Fix step name to look better

* Fix step name to look better

* Fix step name to look better

* Add version to represent build number from GitHub Actions

* Change Docker step to use build number as version

* Add version to represent build number from GitHub Actions

* Add version to represent build number from GitHub Actions

* Cleanup build envs

* Cleanup build envs

* Cleanup build envs

* Cleanup build envs

* Cleanup build envs

* Cleanup build envs

* Cleanup build envs

* Cleanup build envs

* Cleanup build envs

* Cleanup build envs

* Cleanup build envs

* Cleanup build envs

* Cleanup build envs

* Cleanup after experiments

* Cleanup after experiments

* Cleanup after experiments

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
 }
 
 group = 'com.github.mwierzchowski.helios'
-version = '0.0.1-SNAPSHOT'
+version = System.getenv('VERSION') ?: 'SNAPSHOT'
 sourceCompatibility = '1.13'
 targetCompatibility = '1.13'
 
