--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -1,5 +1,9 @@
 name: CI
-on:  push
+on: push
+env:
+  VERSION: ${{github.run_number}}
+  TEST_SUMMARY: /home/runner/work/helios/helios/build/reports/tests/test
+
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -7,7 +11,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Set up Java 13
+    - name: Set up JDK 13
       uses: actions/setup-java@v1
       with:
         java-version: 1.13
@@ -19,32 +23,35 @@ jobs:
       uses: actions/cache@v1
       with:
         path: ~/.gradle/caches
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+        key: ${{runner.os}}-gradle-${{hashFiles('**/*.gradle*')}}
         restore-keys: |
-          ${{ runner.os }}-gradle-
+          ${{runner.os}}-gradle-
 
-    - name: Assemble
+    - name: Assemble Spring Boot JAR
       run: ./gradlew assemble
 
-    - name: Test
+    - name: Unit/Integration tests
       run: ./gradlew test jacocoTestReport
+
+    - name: Assemble Docker image
+      run: docker build --build-arg VERSION=$VERSION -t helios:$VERSION .
 
     - name: Check if test summary is available
       id: check_test_summary
       if: always()
       uses: andstor/file-existence-action@v1
       with:
-        files: "/home/runner/work/helios/helios/build/reports/tests/test"
+        files: ${{env.TEST_SUMMARY}}
 
     - name: Export test summary
       if: steps.check_test_summary.outputs.files_exists == 'true'
       uses: actions/upload-artifact@v2
       with:
         name: Test Summary
-        path: /home/runner/work/helios/helios/build/reports/tests/test
+        path: ${{env.TEST_SUMMARY}}
 
     - name: Quality scan
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
       run: ./gradlew sonarqube -Dsonar.branch.name=$GITHUB_REF_NAME
