--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -36,10 +36,18 @@ jobs:
     - name: Assemble Docker image
       run: docker build -t helios:latest -t helios:$VERSION .
 
-    - name: Start smoke test environment
+    - name: Start test environment
       env:
         OWM_API_KEY: ${{secrets.OWM_API_KEY}}
       run: docker-compose -p helios up -d
+
+    - name: Check if test environment is up & running
+      uses: nev7n/wait_for_response@v1
+      with:
+        url: 'http://localhost:8080/actuator/health'
+        responseCode: 200
+        interval: 500
+        timeout: 15000
 
     - name: Smoke tests
       run: echo 'todo'
