--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -41,15 +41,22 @@ jobs:
         OWM_API_KEY: ${{secrets.OWM_API_KEY}}
       run: docker-compose -p helios up -d
 
-    - name: Check if test environment is up & running
-      uses: nev7n/wait_for_response@v1
-      with:
-        url: 'http://localhost:8080/actuator/health'
-        responseCode: 200
-        interval: 500
-        timeout: 30000
+#    - name: Check if test environment is up & running
+#      uses: nev7n/wait_for_response@v1
+#      with:
+#        url: 'http://localhost:8080/actuator/health'
+#        responseCode: 200
+#        interval: 500
+#        timeout: 30000
 
-    - name: Smoke tests
+    - name: Check if test environment is up & running
+      uses: jtalk/url-health-check-action@v1.3
+      with:
+        url: http://localhost:8080/actuator/health
+        retry-delay: 1s
+        max-attempts: 30
+
+    - name: Functional tests
       run: echo 'todo'
 
     - name: Check if test summary is available
